<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ASOUL</string>
    <string name="sign_in_with_username">Sign in with username</string>
    <string name="asoul">ASOUL</string>
    <string name="enter_password">enter your password</string>
    <string name="sign_in">sign in</string>
    <string name="or_if_you_do_not_have_an_account" tools:ignore="TypographyEllipsis">...or if you do not have an account:</string>
    <string name="register">REGISTER</string>
    <string name="welcome">Welcome!</string>
    <string name="arrow_right"><![CDATA[--->]]></string>
    <string name="please_provide_the_basic_information_below">Please provide the basic information below:</string>
    <string name="username">Username:</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_phone_number_only_numbers">Enter your phone number (only numbers)</string>
    <string name="enter_your_nickname">Enter your nickname</string>
    <string name="phone_num">Phone #:</string>
    <string name="nickname">Nickname:</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password:</string>
    <string name="or_go_back_to" tools:ignore="TypographyEllipsis">...or go back to..</string>
    <string name="add_fund">Add Fund</string>
    <string name="withdraw_fund">Withdraw Fund</string>
    <string name="edit_user_info">Edit User Info</string>
    <string name="edit_truck_info">Edit Truck Info</string>
    <string name="view_market">View Market</string>
    <string name="view_order_history">View Order History</string>
    <string name="cartcontent">cartContent</string>
    <string name="add_withdraw_fund">ADD / WITHDRAW FUND</string>
    <string name="enter_the_amount_you_want_to_add_withdraw">Enter the amount you want to add / withdraw</string>
    <string name="back">back</string>
    <string name="blueButton">Blue Truck <br /> rating: 4.0/5 <br /> open hour: 10am ~ 10pm</string>
    <string name="yellowButton">Yellow Truck <br /> rating: 0.0/5 <br /> open hour: 9am ~ 8pm</string>
    <string name="sushiButton">Sushi Burrito <br /> rating: 4.8/5 <br /> open hour: 11am ~ 10pm</string>
    <string name="idealButton">Ideal CATERING <br /> rating: 5/5 <br /> open hour: 10am ~ 8pm</string>
    <string name="mamaButton">MAMA\'s Hotdog <br /> rating: 2.3/5 <br /> open hour: 8am ~ 5pm</string>
    <string name="truckUnderConstruction">OOPS Truck under <br /> Construction :(</string>
    <string name="edit_menu">Edit Menu</string>
    <string name="food_name">Food name</string>
    <string name="short_description">Short Description</string>
    <string name="price">Price</string>
    <string name="addwithdraw_fund">ADD/WITHDRAW FUND</string>
    <string name="confirm_complete">Confirm Complete</string>
    <string name="order">Order</string>
    <string name="id">ID</string>
    <string name="add_food">Add Food</string>
    <string name="delete_food">Delete Food</string>
    <string name="back_cm">Back</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="truck_information">Truck Information</string>
    <string name="start_time">Start Time</string>
    <string name="truck_name">Truck name</string>
    <string name="end_time">End Time</string>
    <string name="location">Location</string>
    <string name="if_you_want_to_change_menu">…if you want to change menu</string>
    <string name="change_menu">Change Menu</string>
    <string name="user_information">User Information</string>
    <string name="nick_name">Nick name</string>
    <string name="phone_number">Phone number</string>
    <string name="change_information">Change Information</string>
    <string name="or_if_you_want_to_change_password">…or if you want to change password</string>
    <string name="change_password">Change Password</string>
    <string name="food1" tools:ignore="Typos">Food1</string>
    <string name="food2">Food2</string>
    <string name="food3">Food3</string>
    <string name="food4">Food4</string>
    <string name="sprite">Sprite</string>
    <string name="sushi">Sushi</string>
    <string name="burrito">Burrito</string>
    <string name="coke">Coke</string>
    <string name="market">Market</string>
    <string name="check_out">Check Out</string>
    <string name="cart">Cart</string>
    <string name="marketplace">MarketPlace</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="my_truck">My Truck</string>
    <string name="signout">SignOut</string>
    <string name="order_history">Order History</string>
    <string name="purchase_order_history">Purchase Order History:</string>
    <string name="sell_order_history">Sell Order History:</string>
    <string name="back_to_user_info">Back To User Info</string>
</resources>