<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Activities.ChangeTruckInfoActivity">

    <TextView
        android:id="@+id/cti_1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/truck_information"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:gravity="center" />


    <EditText
        android:id="@+id/cti_tn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:hint="@string/truck_name"
        android:maxLines="1"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:inputType="textAutoCorrect" />


    <EditText
        android:id="@+id/cti_st"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:hint="@string/start_time"
        android:maxLines="1"
        android:padding="5dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:inputType="textAutoCorrect" />

    <EditText
        android:id="@+id/cti_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:hint="@string/end_time"
        android:maxLines="1"
        android:padding="5dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:inputType="textAutoCorrect"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/cti_location"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:hint="@string/location"
        android:maxLines="1"
        android:padding="5dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:inputType="textAutoCorrect" />

    <Button
        android:id="@+id/cti_ctib"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/change_information"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/cardview_shadow_start_color" />

    <TextView
        android:id="@+id/cti_2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/if_you_want_to_change_menu"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:gravity="center" />

    <Button
        android:id="@+id/cti_cmb"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/change_menu"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/cardview_shadow_start_color" />

    <Button
        android:id="@+id/cti_back"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/back"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:layout_marginStart="270dp" />
</LinearLayout>