<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Activities.ChangeMenuActivity">

    <TextView
        android:id="@+id/cm_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/edit_menu"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:gravity="center" />


    <EditText
        android:id="@+id/cm_fn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:hint="@string/food_name"
        android:maxLines="1"
        android:padding="5dp"
        android:layout_marginTop="35dp"
        android:autofillHints=""
        android:inputType="textAutoCorrect" />


    <EditText
        android:id="@+id/cm_description"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:hint="@string/short_description"
        android:maxLines="1"
        android:padding="5dp"
        android:layout_marginTop="35dp"
        android:autofillHints=""
        android:inputType="textAutoCorrect" />

    <EditText
        android:id="@+id/cm_price"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:hint="@string/price"
        android:maxLines="1"
        android:padding="5dp"
        android:layout_marginTop="35dp"
        android:autofillHints=""
        android:inputType="textAutoCorrect" />

    <EditText
        android:id="@+id/cm_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:hint="@string/id"
        android:maxLines="1"
        android:padding="5dp"
        android:layout_marginTop="35dp"
        android:autofillHints=""
        android:inputType="textAutoCorrect" />

    <Button
        android:id="@+id/cm_addb"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/add_food"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/cardview_shadow_start_color" />

    <Button
        android:id="@+id/cm_deleteb"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/delete_food"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/cardview_shadow_start_color" />

    <Button
        android:id="@+id/cm_back"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/back_cm"
        android:layout_marginTop="65dp"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:layout_marginStart="270dp" />

</LinearLayout>