<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Activities.ChangeUserInfoActivity">

    <TextView
        android:id="@+id/cui_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/user_information"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:gravity="center" />


    <EditText
        android:id="@+id/cui_nn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:hint="@string/nick_name"
        android:maxLines="1"
        android:padding="5dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:inputType="textAutoCorrect" />

    <EditText
        android:id="@+id/cui_pn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:hint="@string/phone_number"
        android:maxLines="1"
        android:padding="5dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:inputType="textAutoCorrect" />

    <Button
        android:id="@+id/cui_cuib"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/change_information"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/cardview_shadow_start_color" />

    <TextView
        android:id="@+id/cui_2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/or_if_you_want_to_change_password"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:textSize="15sp"
        android:layout_marginTop="30dp"
        android:gravity="center" />

    <Button
        android:id="@+id/cui_cpb"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/change_password"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/cardview_shadow_start_color" />

    <Button
        android:id="@+id/cui_back"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/back"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:layout_marginStart="270dp" />


</LinearLayout>