<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Activities.ChangePasswordActivity">

    <TextView
        android:id="@+id/cp_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/change_password"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:gravity="center" />


    <EditText
        android:id="@+id/cp_op"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="5dp"
        android:layout_marginTop="50dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/cp_np"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="5dp"
        android:layout_marginTop="50dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/cp_confirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="5dp"
        android:layout_marginTop="50dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/cp_cpb"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/change_password"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/cardview_shadow_start_color" />

    <Button
        android:id="@+id/cp_back"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/back"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:layout_marginStart="270dp" />

</LinearLayout>