<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="Activities.UserInfoActivity"
        android:background="@drawable/login_bg">

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/WelcomeContent"
              android:textSize="24sp"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintLeft_toLeftOf="parent"
              android:textStyle="italic"
              android:layout_marginTop="20sp"
    />

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/AccountBalance"
              android:textSize="20sp"
              app:layout_constraintTop_toBottomOf="@+id/WelcomeContent"
              app:layout_constraintLeft_toLeftOf="parent"
              android:textStyle="italic"
              android:layout_marginTop="48dp"
    />
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/btnAddFund"
            android:backgroundTint="@color/white"
            android:text="@string/addwithdraw_fund"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/AccountBalance"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="70sp"
            android:layout_marginTop="10sp"
    />


    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/PhoneNumber"
              android:textSize="20sp"
              app:layout_constraintTop_toBottomOf="@id/btnAddFund"
              app:layout_constraintLeft_toLeftOf="parent"
              android:textStyle="italic"
              android:layout_marginTop="15dp"
              />

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/TruckName"
              android:textSize="20sp"
              app:layout_constraintTop_toBottomOf="@id/PhoneNumber"
              app:layout_constraintLeft_toLeftOf="parent"
              android:textStyle="italic"
              android:layout_marginTop="15sp"
    />
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/btnEditUserInfo"
            android:backgroundTint="@color/white"
            android:text="@string/edit_user_info"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/TruckName"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
    />
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/btnEditTruckInfo"
            android:backgroundTint="@color/white"
            android:text="@string/edit_truck_info"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/TruckName"
            app:layout_constraintLeft_toRightOf="@id/btnEditUserInfo"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
        />
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/btnViewMarket"
            android:backgroundTint="@color/white"
            android:text="@string/view_market"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@id/btnEditUserInfo"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            />
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/btnOrderHistory"
            android:backgroundTint="@color/white"
            android:text="@string/view_order_history"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@id/btnViewMarket"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            />
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:id="@+id/accessError"
              android:layout_marginTop="20sp"
              android:textColor="@color/black"
              android:backgroundTint="@color/white"
              android:textSize="25sp"
              app:layout_constraintTop_toBottomOf="@+id/btnOrderHistory"
              app:layout_constraintLeft_toLeftOf="parent"
    />



</androidx.constraintlayout.widget.ConstraintLayout>